auto s2n done as well as made plotting script. Just need to snaz up the look of the plot and it will look great.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
 # Calculation outputs
 fort.*
+*_????????_??????
 
 # Fortran 
 *.o
 *.mod
 *.a
 
-# hormat compiled
-./hormat-so
+# fortran compiled
+hormat-so
+front21.out
+twofnr20.out
+pChan_DOM
 
 # test twofnr dir
 test_twofnr/
+
+# comparing wfns and smat hormat to pChan
+Comparing_wfns_smat_pChan/
+
+# venv
+.venv
