Made auto 2n n and j, successful, corrected error with labelling NL the LELO and vice versa.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ fort.*
 *.mod
 *.a
 
+# data
+*.dat
+*.csv
+
 # fortran compiled
 hormat-so
 front21.out
@@ -18,6 +22,7 @@ test_twofnr/
 
 # comparing wfns and smat hormat to pChan
 Comparing_wfns_smat_pChan/
+data_swapNLLELO/
 
 # venv
 .venv
